--- a/src/components/introtext.module.css
+++ b/src/components/introtext.module.css
@@ -26,8 +26,8 @@
 
     .page-intro {
       margin-top: 20px;
-      font-size: 37px;
-      line-height: 42px;
+      font-size: 28px;
+      line-height: 34px;
     }
   }
 }
